test/conformance/kuttl/generate-validating-admission-policy/clusterpolicy/standard/generate/cpol-any-match-resource/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-path-t7
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
  validatingadmissionpolicy:
    generated: true
